--- a/website/src/scss/base/_reset.scss
+++ b/website/src/scss/base/_reset.scss
@@ -37,3 +37,7 @@ main {
   flex-direction: column;
   align-items: center;
 }
+
+section {
+  max-width: 100vw;
+}
